Fix box shadow of right sidebar on mobile

--- a/admin-dev/themes/new-theme/scss/components/layout/_right-sidebar.scss
+++ b/admin-dev/themes/new-theme/scss/components/layout/_right-sidebar.scss
@@ -9,7 +9,10 @@
   padding: 0 3em 0 0;
   overflow: auto;
   background: #fff;
-  box-shadow: 0 0 12px rgba(0, 0, 0, 0.8);
+
+  &.sidebar-open {
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.8);
+  }
 
   .quicknav-container {
     height: 100%;
